infra/k8s/cloud-beaver/HTTPRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloud-beaver-httproute
  namespace: cloud-beaver
spec:
  parentRefs:
  - name: main-gateway
    namespace: kube-system
    sectionName: https-wildcard
  hostnames:
  - beaver.stage.codedang.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: cloud-beaver
      port: 8978
