infra/k8s/cloud-beaver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-beaver-ingress
  namespace: cloud-beaver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - beaver.stage.codedang.com
      secretName: cloud-beaver-tls
  rules:
    - host: beaver.stage.codedang.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud-beaver
                port:
                  number: 8978
